--- a/trim/css/atlas.css
+++ b/trim/css/atlas.css
@@ -11,20 +11,15 @@
 	transition: all 200ms ease-out;
 	box-sizing: border-box;
 }
+
 .body-open {
 	overflow: hidden;
-}
-.flaticon-cross {
-	font-family: Icons;
-}
-.flaticon-cross:before {
-    content: "\f106";
 }
 
 .offcanvas-navigation {
 	visibility: hidden;
 	opacity: 0;
-	width: 320px;
+	width: 350px;
 	min-height: 100vh;
 	display: block;
 	height: 100%;
@@ -32,23 +27,127 @@
 	top: 0;
 	left: 0;
 	z-index: 9999;
-	background-color: #272727;
-	
+	background-color: #b34a4a;
+	padding: 0 10px;
 	transform: translate(-200px, 0);
 	transition: all 400ms ease-out;
 	overflow: auto;
 }
 .offcanvas-navigation__inner {
-	padding-top: 80px;
-	padding: 50px;
-	
+	padding: 70px 0;
 }
 .offcanvas-navigation__inner a{
-	color: rgba(255, 255, 255, 0.7) !important;
+	color: rgba(255, 255, 255, 0.9) !important;	
 }
 
+.offcanvas-navigation__inner a:hover{
+	padding-left: 5px;
+}
+.offcanvas-menu li{
+	list-style: none;
+	position: relative;
+}
+
+.offcanvas-menu  span.menu-expand {
+	position: absolute;
+	top:10px;
+	right: 2px;
+	width: 50px;
+	margin-right: 10px;
+	line-height: 20px;
+	text-align: center;
+}
+.collapse span.menu-expand {
+	position: absolute;
+	top: 1px;
+	right: 1px;
+}
+.sub-menu {
+	display: none;
+}
+.offcanvas-navigation__top {
+	margin:0 20px;
+}
 .overlay-open, .menu-open {
 	opacity: 1;
 	visibility: visible;
 	transform: translate(0, 0);
 }
+.btn-close {
+	position: absolute;
+	right: 25px;
+	top: 35px;
+
+}
+@media (max-width: 400px) {
+	.offcanvas-navigation {
+		width: 230px;
+	}
+}
+/* START Burger botton for menu*/
+			/* nav-icon-4 */
+			.nav-icon-4{
+			  width: 25px;
+			  height: 21px;
+			  margin:5px 5px;
+			  position: relative;
+			  cursor: pointer;
+			  display: inline-block;
+			}
+			.nav-icon-4 span{
+			  background-color:#FFF;
+			  position: absolute;
+			  border-radius: 2px;
+			  transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+			}
+			.nav-icon-4 span:nth-child(1){
+			  width: 100%;
+			  height:  2px;
+			  display: block;
+			  top: 0px;
+			  left: 0px;
+			}
+			.nav-icon-4 span:nth-child(2){
+			  width: 100%;
+			  height:  2px;
+			  display: block;
+			  top: 9px;
+			  left: 0px;
+			}
+			.nav-icon-4 span:nth-child(3){
+			  width: 100%;
+			  height:  2px;
+			  display: block;
+			  bottom: 0px;
+			  left: 0px;
+			}
+
+			.nav-icon-4.open {
+			  transform: rotate(90deg);
+			}
+			.nav-icon-4.open span:nth-child(1){
+			  left:0px;
+			  top: 9px;
+			  width: 25px;
+			  transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+			  transform: rotate(90deg);
+			  transition-delay: 150ms;
+			}
+			.nav-icon-4.open span:nth-child(2){
+			  left:-3px;
+			  top: 15px;
+			  width: 18px;
+			  transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+			  transform: rotate(45deg);
+			  transition-delay: 50ms;
+			}
+			.nav-icon-4.open span:nth-child(3){
+			  left:10px;
+			  top: 15px;
+			  width: 18px;
+			  transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+			  transform: rotate(-45deg);
+			  transition-delay: 100ms;
+			}
+
+/* END Burger botton for menu*/
