--- a/trim/css/atlas.css
+++ b/trim/css/atlas.css
@@ -367,9 +367,7 @@
 }
 
 @media  (max-width: 870px) {
-	.items {	
-		flex-basis: 50% !important;
-	}
+	
     .item {
         height: 240px;
         margin: 0;            
@@ -495,5 +493,42 @@
 	font-style: italic;
 	font-size: 35px;
 	font-family: "Cookie", Arial, sans-serif, cursive;
+}
+
+/* Catalog*/
+.item-img {
+	height: 230px;
+	width: 100%;
+	margin-bottom: 10px;	
+}
+.item-img img {
+	object-fit: cover;
+	height: 100%;
+}
+.items h2 {
+	font-size: 24px;
+}
+.items p {
+	font-size: 20px;
+}
+.cash-s {
+	text-align: right;
+	background-color: #464646;
+}
+.cash-s p {
+	color: #fff;
+}
+
+@media (max-width: 985px){
+	.item-img {
+		height: 160px;
+		width: 100%;
+		}	
+}
+@media (max-width: 768px){
+	.item-img {
+		height: 120px;
+		width: 100%;
+		}	
 }
 
