--- a/trim/css/style.css
+++ b/trim/css/style.css
@@ -7492,6 +7492,8 @@ h1, h2, h3, h4, h5,
     background: #000; }
 
 .slider-text {
+  padding-top: 100px;
+  padding-bottom: 100px;
   color: #fff;
   height: 750px;
   position: relative; }
@@ -7499,14 +7501,10 @@ h1, h2, h3, h4, h5,
     .slider-text {
       text-align: center; } }
   .slider-text .icon {
-    position: absolute;
-    top: 50%;
-    right: 30px;
-    width: 70px;
-    height: 70px;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+
+    width: 80px;
+    height: 80px;
+
     bordeR: 1px solid rgba(255, 255, 255, 0.7);
     -webkit-animation: pulse 2s infinite;
     animation: pulse 2s infinite;
@@ -7516,13 +7514,11 @@ h1, h2, h3, h4, h5,
     border-radius: 50%; }
     @media (max-width: 767.98px) {
       .slider-text .icon {
-        top: 72%;
-        right: 0;
-        left: 0;
+
         margin: 0 auto; } }
     .slider-text .icon span {
       color: white;
-      font-size: 20px; }
+      font-size: 40px; }
   .slider-text h1 {
     font-size: 50px;
     color: #fff;
@@ -7738,7 +7734,7 @@ h1, h2, h3, h4, h5,
           padding: 0; }
           .ftco-intro .wrap .social .social-icon li a span {
             color: #fff;
-            font-size: 20px; }
+            font-size: 30px; }
   .ftco-intro .wrap h3 {
     font-size: 16px; }
   .ftco-intro .wrap .text {
