--- a/trim/css/atlas.css
+++ b/trim/css/atlas.css
@@ -579,6 +579,7 @@
 .sidebar-box {
 	border-bottom: 1px solid #464646;
 }
+
 /* Оффер блоки с параллаксом*/
 .parallax {
 	position: relative;
@@ -596,9 +597,24 @@
 	opacity: 0.6;
 	background: #000;
 }
+.discount {
+	overflow: hidden;
+}
+
+@media (max-width: 670px){
+	.small h2 {
+			font-size: 28px !important;
+		}	
+	.small .h2-small {
+			font-size: 18px !important;
+	}	
+}
 /*END Offers*/
 
+/* LOGO image*/
 .img-brand {
 	height: 42px;
 	vertical-align: sub;
 }
+/*END LOGO*/
+
