--- a/trim/css/atlas.css
+++ b/trim/css/atlas.css
@@ -709,3 +709,19 @@
 }
 
 /*END Submenu*/
+#response_order {
+
+}
+#response_order p {
+	text-align: center;
+	color: #75db75;
+	margin-bottom: 0;
+	opacity: 0;
+	visibility: hidden;
+	transition: all 500ms ease-out;
+}
+.success_massage {
+	opacity: 1 !important;
+	visibility: visible !important;
+	transform: translate(0, -10px);
+}
