--- a/trim/css/style.css
+++ b/trim/css/style.css
@@ -4404,7 +4404,7 @@ button.close {
   flex-direction: column;
   width: 100%;
   pointer-events: auto;
-  background-color: #fff;
+  background-color: #5a5a5a;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 0.3rem;
@@ -4434,7 +4434,7 @@ button.close {
   -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 1rem;
-  border-bottom: 1px solid #e9ecef;
+
   border-top-left-radius: 0.3rem;
   border-top-right-radius: 0.3rem; }
   .modal-header .close {
@@ -4442,6 +4442,7 @@ button.close {
     margin: -1rem -1rem -1rem auto; }
 
 .modal-title {
+  font-size: 16px;
   margin-bottom: 0;
   line-height: 1.5; }
 
@@ -4461,9 +4462,9 @@ button.close {
   align-items: center;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
-  justify-content: flex-end;
+  justify-content: center;
   padding: 1rem;
-  border-top: 1px solid #e9ecef; }
+  }
   .modal-footer > :not(:first-child) {
     margin-left: .25rem; }
   .modal-footer > :not(:last-child) {
