--- a/trim/css/atlas.css
+++ b/trim/css/atlas.css
@@ -72,7 +72,7 @@
 				display: block;
 				height: 100%;
 				z-index: 9999;
-				background-color: #b34a4a;
+				background-color: #5b5f5e;
 				padding: 0 30px;
 				transform: translate(200px, 0);
 				transition: all 400ms ease-out;
@@ -88,6 +88,7 @@
 			}
 			.offcanvas-menu {
 				padding-left: 0px;
+				font-family: sans-serif;
 			}
 
 			.offcanvas-menu li{
@@ -111,28 +112,28 @@
 				text-align: center;
 				z-index: 10;
 			}
+
 			.off-con {
 				margin-top: 30px;
 			}
 			.off-con p {
 				text-align: center;
-				font-size: 22px;
+				font-size: 18px;
 			}
 
 			.off-con .namefirm {
 				margin-bottom: 0;
 			}
 			.off-con .social-icon {
-				font-size: 2rem;
+				font-size: 1.6rem;
 				justify-content: center;
 			}
 			.off-con .social-icon div {
-				padding: 5px;
-				text-align: center;
+				padding: 10px;
 			}
 			.logo-cavnas div {
 				text-align: center;
-				font-size: 20px;
+				font-size: 18px;
 				margin-bottom: 10px;
 			}
 			.sub-menu li {
@@ -147,11 +148,13 @@
 				visibility: visible;
 				transform: translate(0, 0);
 			}
+			.btn-close i {
+				font-size: 24px;
+			}
 			.btn-close {
 				position: absolute;
-				right: 25px;
-				top: 10px;
-
+				right: 35px;
+				top: 30px;
 			}
 			@media (max-width: 400px) {
 				.offcanvas-navigation {
@@ -332,8 +335,11 @@
 /* Scroll to Top END */
 
 .namefirm {	
-	font-family: Cookie Arial sans-serif;
-	color: #dbdbdb;
+	color: #ffaa57;
+	font-style: italic;
+}
+.namefirm i {
+	font-size: 14px;
 	font-style: italic;
 }
 .test {
@@ -770,7 +776,7 @@
 }
 @media (max-width: 575px) {
 	.block-contact h3 {
-		font-size:12px !important;
+		font-size:14px !important;
 	}
 	.block-contact {
 		font-size: 10px;
